@@ -72,7 +72,7 @@ frequency_of_updates_schema = Schema((
                             "Trimester",
                             vocabulary="get_trimesters_vocabulary",
                             )},
-            auto_insert=True,
+            auto_insert=False,
             label_msgid='indicators_label_codes',
             i18n_domain='indicators',
             ),
@@ -136,7 +136,7 @@ schema = Schema((
             columns={'set':SelectColumn("Set ID",
                                         vocabulary="get_indicator_codes"),
                      'code':Column("Code number")},
-            auto_insert=True,
+            auto_insert=False,
             label_msgid='indicators_label_codes',
             i18n_domain='indicators',
             ),
